--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_child-support.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_child-support.yml
@@ -306,7 +306,7 @@ id: interview_order_Plaintiff_Affidavit_in_support_of_request_for_child_support_
 code: |
   # This is a placeholder to control logic flow in this interview
   # It was generated from interview_generator.py as an 'interview order' type question.  
-  basic_questions_intro_screen 
+  al_intro_screen 
   Plaintiff_Affidavit_in_support_of_request_for_child_support_order0008_intro
 
   # users[0].states_above_true
