--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_motion-for-impoundment.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_motion-for-impoundment.yml
@@ -175,7 +175,7 @@ id: interview_order_a_258e_motion_for_impoundment0019
 code: |
   # This is a placeholder to control logic flow in this interview
   # It was generated from interview_generator.py as an 'interview order' type question.
-  basic_questions_intro_screen
+  al_intro_screen
   # If the user needs to fill out the form
   #if a_258e_motion_for_impoundment0019_intro:
   # Set the preferred/allowed courts for this interview
