--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_page_1.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_page_1.yml
@@ -65,18 +65,15 @@ fields:
       - I need the order to protect me and my children.: me and children
       - I am helping someone else ask for this order.: someone else
 ---
+sets:
+  - other_parties[0].name.first
+  - other_parties[0].name.last
 id: name of abuser
 question: |
   What is the name of the person who is abusing you?  
 fields:
-  - First name: other_parties[0].name.first
-  - Middle name: other_parties[0].name.middle
-    required: False
-  - Last name: other_parties[0].name.last
-  - Suffix: other_parties[0].name.suffix
-    required: False
-    code: |
-      name_suffix()
+  - code: |
+      other_parties[0].name_fields()
   - Gender: other_parties[0].gender
     choices:
       - Female: female
@@ -90,7 +87,6 @@ fields:
     show if:
       variable: other_parties[0].gender
       is: "self-described"
-
 ---
 id: what to expect
 question: |
@@ -213,9 +209,6 @@ subquestion: |
 buttons:
   - Exit: exit
   - Restart: restart
----
-include:
-  - docassemble.MAVirtualCourt:basic-questions.yml
 ---
 id: helper relationship
 question: |
@@ -888,7 +881,7 @@ id: complaint_209A_labeled_page10003
 code: |
   # allowed_courts = interview_metadata['complaint_209A_labeled_page10003']['allowed courts']
   # preferred_court = interview_metadata['complaint_209A_labeled_page10003']['preferred court']
-  # basic_questions_intro_screen 
+  # al_intro_screen 
   # user_saw_what_to_expect
   # users[0].name.first
   # plaintiff_is_major_yes # Ask for age
@@ -1047,11 +1040,11 @@ attachment:
       - "user_name_full": ${ str(users[0]) }
       - "defendant": ${ str(other_parties[0]) }
       - "signature_date": ${ signature_date.format("M/d/yyyy") }
-      - "municipal_court": ${ courts[0].department == "Boston Municipal Court" }
-      - "district_court": ${ courts[0].department == "District Court" }
-      - "probate_court": ${ courts[0].department == "Probate and Family Court" }
-      - "superior_court": ${ courts[0].department == "Superior Court" }
-      - "court_name_short": ${ courts[0].division }
+      - "municipal_court": ${ trial_court.department == "Boston Municipal Court" }
+      - "district_court": ${ trial_court.department == "District Court" }
+      - "probate_court": ${ trial_court.department == "Probate and Family Court" }
+      - "superior_court": ${ trial_court.department == "Superior Court" }
+      - "court_name_short": ${ trial_court.division }
       - "defendant_alias": ${ other_parties[0].name_other if defendant_has_alias else '' }
       - "defendant_weapons_description": ${ defendant_weapons_safe_for_pdf  }
       - "defendant_gender_male": ${ other_parties[0].gender_male }
@@ -1121,11 +1114,11 @@ attachment:
       - "user_name_full": ${ str(users[0]) }
       - "defendant": ${ str(other_parties[0]) }
       - "signature_date": ${ signature_date.format("M/d/yyyy") }
-      - "municipal_court": ${ courts[0].department == "Boston Municipal Court" }
-      - "district_court": ${ courts[0].department == "District Court" }
-      - "probate_court": ${ courts[0].department == "Probate and Family Court" }
-      - "superior_court": ${ courts[0].department == "Superior Court" }
-      - "court_name_short": ${ courts[0].division }
+      - "municipal_court": ${ trial_court.department == "Boston Municipal Court" }
+      - "district_court": ${ trial_court.department == "District Court" }
+      - "probate_court": ${ trial_court.department == "Probate and Family Court" }
+      - "superior_court": ${ trial_court.department == "Superior Court" }
+      - "court_name_short": ${ trial_court.division }
       - "defendant_alias": ${ other_parties[0].name_other if defendant_has_alias else '' }
       - "defendant_weapons_description": ${ defendant_weapons_safe_for_pdf  }
       - "defendant_gender_male": ${ other_parties[0].gender_male }
