--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_plaintiff-confidential.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_plaintiff-confidential.yml
@@ -192,20 +192,14 @@ subquestion: |
   The court keeps your address on the Plaintiff Confidential Information form, separate from the rest of your file. 
   % endif 
 fields:
-  - Street address: users[0].address.address
-    address autocomplete: True
-  - Unit: users[0].address.unit
-    required: False
-  - City: users[0].address.city
-  - State: users[0].address.state
-    code: |
-      states_list()
-    default: MA      
-  - Zip: users[0].address.zip
-    required: False
+  - code: |
+      users[0].address_fields(default_state="MA")
   - I live at more than one address: users[0].other_addresses.there_are_any
     datatype: yesno
 ---
+sets:
+  - users[0].other_addresses[i].address
+  - users[0].other_addresses[i].city
 id: other address where plaintiff lives
 question: |
   Tell us about the ${ordinal(i)} other address where you live
@@ -215,17 +209,8 @@ subquestion: |
   as well as ${users[0].other_addresses.complete_elements()}
   % endif
 fields:
-  - Street address: users[0].other_addresses[i].address
-    address autocomplete: True
-  - Unit: users[0].other_addresses[i].unit
-    required: False
-  - City: users[0].other_addresses[i].city
-  - State: users[0].other_addresses[i].state
-    code: |
-      states_list()
-    default: MA      
-  - Zip: users[0].other_addresses[i].zip
-    required: False
+  - code: |
+      users[0].other_addresses[i].address_fields(default_state="MA")
 ---
 id: has another other address
 question: |
@@ -320,9 +305,6 @@ attachment:
       - "plaintiff_preferred_language": ${user_preferred_language if user_needs_interpreter else ''} 
       - "plaintiff_signature": ${ users[0].signature }
 ---
-include:
-  - docassemble.MAVirtualCourt:basic-questions.yml
----
 id: plaintiff confidential intro
 comment: |
   This question is used to introduce your interview. Please customize
@@ -353,7 +335,7 @@ help:
 id: interview_order_A_Plaintiff_Confidential_Information0011
 code: |
   # This is a placeholder to control logic flow in this interview
-  # It was generated from interview_generator.py as an 'interview order' type question.  basic_questions_intro_screen 
+  # It was generated from interview_generator.py as an 'interview order' type question.  al_intro_screen 
   A_Plaintiff_Confidential_Information0011_intro
 
   str(users[0])
