--- a/docassemble/MA209AProtectiveOrder/data/questions/escape.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/escape.yml
@@ -4,6 +4,6 @@ comment: |
   Will not be compatible with all browsers. JQuery doesn't offer that kind of support.
 ---
 features:
-  javascript: docassemble.MAVirtualCourt:escape.js
-  css: docassemble.MAVirtualCourt:escape.css
+  javascript: escape.js
+  css: escape.css
 ---
