--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-venv/*
 tests/chromedriver
 *DS_Store*
-*pyc
-*__pycache__*
 node_modules*
 .env
 npm-debug.log
-.history
 error*.jpg
+screenshot_*.jpg
+downloads_*
+*_lang_*.feature
+*_report_*
