Addresses #66 recalc values for affidavit. Adds reconsider to all attachments. Does not address all recalculations needed in this document. Maybe we should turn off the ability to edit answers after the documents have been generated until we can address this issue because just using `reconsider: True` on documents did not seem to be sufficient.

--- a/docassemble/MA209AProtectiveOrder/data/questions/209A-defendant-child-support.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A-defendant-child-support.yml
@@ -119,6 +119,7 @@ subquestion: |
 attachment code: A_defendant_s_child_support_affidavit_ready_for_upload0004_attachment
 ---
 need: A_defendant_s_child_support_affidavit_ready_for_upload0004
+reconsider: True
 attachment:
     variable name: A_defendant_s_child_support_affidavit_ready_for_upload0004_attachment
     name: Defendant's Affidavit In Connection with Request For Child Support Order
@@ -249,6 +250,7 @@ subquestion: |
   
    ${A_defendant_s_child_support_affidavit_ready_for_upload0004_attachment_preview}
 ---
+reconsider: True
 attachment:
     variable name: A_defendant_s_child_support_affidavit_ready_for_upload0004_attachment_preview
     name: Defendant's Affidavit In Connection with Request For Child Support Order
