--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_attach_exhibits.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_attach_exhibits.yml
@@ -74,6 +74,7 @@ subquestion: |
   ${exhibits.add_action() }
 continue button field: review_exhibits  
 ---
+reconsider: True
 attachment: 
   docx template file: 209A_exhibit_cover_page.docx
   variable name: exhibit_cover_page
