--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_motion-for-impoundment.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_motion-for-impoundment.yml
@@ -138,6 +138,7 @@ subquestion: |
 attachment code: a_258e_motion_for_impoundment0019_attachment
 ---
 need: a_258e_motion_for_impoundment0019
+reconsider: True
 attachment:
     variable name: a_258e_motion_for_impoundment0019_attachment
     name: Motion for Impoundment
@@ -213,6 +214,7 @@ subquestion: |
 
    ${a_258e_motion_for_impoundment0019_attachment_preview}
 ---
+reconsider: True
 attachment:
     variable name: a_258e_motion_for_impoundment0019_attachment_preview
     name: Motion for Impoundment
@@ -266,6 +268,7 @@ code: |
   #addAddendum_impound = bool(txtFieldsList_impoundment)
   addAddendum_impound = False
 ---
+reconsider: True
 attachment:
   - variable name: impound_addendum
     docx template file: 209A_impound_addendum.docx
