--- a/docassemble/MA209AProtectiveOrder/data/questions/209A_plaintiff-confidential.yml
+++ b/docassemble/MA209AProtectiveOrder/data/questions/209A_plaintiff-confidential.yml
@@ -283,6 +283,7 @@ subquestion: |
 attachment code: A_Plaintiff_Confidential_Information0011_attachment
 ---
 need: A_Plaintiff_Confidential_Information0011
+reconsider: True
 attachment:
     variable name: A_Plaintiff_Confidential_Information0011_attachment
     name: Plaintiff Confidential Information Form
@@ -380,6 +381,7 @@ subquestion: |
   
    ${A_Plaintiff_Confidential_Information0011_attachment_preview}
 ---
+reconsider: True
 attachment:
     variable name: A_Plaintiff_Confidential_Information0011_attachment_preview
     name: Plaintiff Confidential Information Form
@@ -458,6 +460,7 @@ code: |
     
   addAddendum_confidential = bool(txtFieldsList_confidential)
 ---
+reconsider: True
 attachment:
   - variable name: confidential_info_addendum
     docx template file: 209A_confidential_info_addendum.docx
